# RayVista

./: CMakeLists.txt  README.md  main2D.cpp  main3D.cpp
include/: Raycasting2D.h  Raycasting3D.h
src/: Raycasting2D.cpp  Raycasting3D.cpp
